refine repository structure

--- a/Neural Network Analysis/main.ipynb
+++ b/Neural Network Analysis/main.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('data/train.csv')\n",
+    "dataset = pd.read_csv('../Data/train.csv')\n",
     "\n",
     "# data"
    ]
@@ -405,15 +405,6 @@
    ],
    "source": [
     "model.metrics_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ]
