--- a/Neural Network Analysis/main.ipynb
+++ b/Neural Network Analysis/main.ipynb
@@ -369,8 +369,8 @@
     }
    ],
    "source": [
-    "test_dataset = pd.read_csv('data/test.csv')\n",
-    "labels_dataset = pd.read_csv('data/submit.csv')\n",
+    "test_dataset = pd.read_csv('../Data/test.csv')\n",
+    "labels_dataset = pd.read_csv('../Data/submit.csv')\n",
     "\n",
     "nan_idx = test_dataset[pd.isnull(test_dataset.text)].index.tolist()\n",
     "test_dataset.loc[nan_idx, 'text'] = ' '\n",
