--- a/K-NN Analysis/main.ipynb
+++ b/K-NN Analysis/main.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,32 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "maxlen = 1000\n",
-    "\n",
-    "training_samples = 15000\n",
-    "validation_sample = 6000\n",
-    "\n",
+    "training_samples = 21000\n",
     "max_words = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('../Data/train.csv')\n",
-    "\n",
-    "# data"
+    "dataset = pd.read_csv('../Data/train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +111,12 @@
     "labels = labels[indices]\n",
     "\n",
     "x_train = data[:training_samples]\n",
-    "y_train = labels[:training_samples]\n",
-    "x_val = data[training_samples: training_samples + validation_sample]\n",
-    "y_val = labels[training_samples: training_samples + validation_sample]"
+    "y_train = labels[:training_samples]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +127,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 38
     }
    ],
    "source": [
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 0.5509615384615385\n"
+      "Accuracy: 0.5517307692307692\n"
      ]
     }
    ],
