--- a/K-NN Analysis/main.ipynb
+++ b/K-NN Analysis/main.ipynb
@@ -24,94 +24,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "import numpy as np"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlen = 1000\n",
-    "training_samples = 21000\n",
-    "max_words = 10000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = pd.read_csv('../Data/train.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nan_idx = dataset[pd.isnull(dataset.text)].index.tolist()\n",
-    "dataset.loc[nan_idx, 'text'] = ' '\n",
+    "train_data = pd.read_csv('../Data/train.csv')\n",
     "\n",
-    "text = dataset.text.tolist()\n",
-    "labels = dataset.label.tolist()"
+    "nan_idx = train_data[pd.isnull(train_data.text)].index.tolist()\n",
+    "train_data.loc[nan_idx, 'text'] = ' '"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Znaleziono 238051 unikatowych tokenów.\n",
-      "Kształt tensora danych: (20800, 1000)\n",
-      "Kształt tensora etykiet: (20800,)\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('tfidvect', TfidfVectorizer()),\n",
+       "                ('clf', KNeighborsClassifier(n_neighbors=7))])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
     }
    ],
    "source": [
+    "clf = Pipeline([\n",
+    "    ('tfidfvect', TfidfVectorizer()),\n",
+    "    ('clf', KNeighborsClassifier(n_neighbors=7)),\n",
+    "])\n",
     "\n",
-    "tokenizer = Tokenizer(num_words=max_words)\n",
-    "\n",
-    "tokenizer.fit_on_texts(text)\n",
-    "sequences = tokenizer.texts_to_sequences(text)\n",
-    "\n",
-    "word_index = tokenizer.word_index\n",
-    "print(f'Znaleziono {len(word_index)} unikatowych tokenów.')\n",
-    "\n",
-    "data = pad_sequences(sequences, maxlen=maxlen)\n",
-    "labels = np.asarray(labels)\n",
-    "\n",
-    "print(f'Kształt tensora danych: {data.shape}')\n",
-    "print(f'Kształt tensora etykiet: {labels.shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indices = np.arange(data.shape[0])\n",
-    "np.random.shuffle(indices)\n",
-    "data = data[indices]\n",
-    "labels = labels[indices]\n",
-    "\n",
-    "x_train = data[:training_samples]\n",
-    "y_train = labels[:training_samples]"
+    "clf.fit(train_data.text, train_data.label)"
    ]
   },
   {
@@ -120,68 +79,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(n_neighbors=7)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 38
-    }
-   ],
-   "source": [
-    "#Import knearest neighbors Classifier model\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "#Create KNN Classifier\n",
-    "knn = KNeighborsClassifier(n_neighbors=7)\n",
-    "\n",
-    "#Train the model using the training sets\n",
-    "knn.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_dataset = pd.read_csv('../Data/test.csv')\n",
-    "labels_dataset = pd.read_csv('../Data/submit.csv')\n",
-    "\n",
-    "nan_idx = test_dataset[pd.isnull(test_dataset.text)].index.tolist()\n",
-    "test_dataset.loc[nan_idx, 'text'] = ' '\n",
-    "test_text = test_dataset.text.tolist()\n",
-    "\n",
-    "tokenizer = Tokenizer(num_words=max_words)\n",
-    "tokenizer.fit_on_texts(test_text)\n",
-    "sequences = tokenizer.texts_to_sequences(test_text)\n",
-    "\n",
-    "x_test = pad_sequences(sequences, maxlen=maxlen)\n",
-    "y_test = np.asarray(labels_dataset.label.tolist())\n",
-    "\n",
-    "y_pred = knn.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 0.5517307692307692\n"
+      "[0 1 1 ... 1 1 1]\nAccuracy: 64.51923076923077%\n"
      ]
     }
    ],
    "source": [
-    "#Import scikit-learn metrics module for accuracy calculation\n",
-    "from sklearn import metrics\n",
-    "# Model Accuracy, how often is the classifier correct?\n",
-    "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
+    "test_data = pd.read_csv('../Data/test.csv')\n",
+    "nan_idx = test_data[pd.isnull(test_data.text)].index.tolist()\n",
+    "test_data.loc[nan_idx, 'text'] = ' '\n",
+    "\n",
+    " \n",
+    "predicted = clf.predict(test_data.text)\n",
+    "print(f'Accuracy: {np.mean(predicted == test_data.label) * 100}%')"
    ]
   }
  ]
