remove redundant analysis; change structure; fix issues

--- a/K-NN Analysis/k_nearest_neighbours.ipynb
+++ b/K-NN Analysis/k_nearest_neighbours.ipynb
@@ -24,69 +24,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "from sklearn.neighbors import KNeighborsClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TRAINING_SAMPLES = 15000\n",
-    "VALIDATION_SAMPLES = 6000\n",
-    "MAX_WORDS = 10000\n",
-    "MAX_FEATURE_LEN = 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = pd.read_csv('../Data/train.csv')\n",
-    "\n",
-    "nan_idx = train_data[pd.isnull(train_data.text)].index.tolist()\n",
-    "train_data.loc[nan_idx, 'text'] = ' '"
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Znaleziono 238051 unikatowych tokenów.\n",
-      "Kształt tensora danych: (20800, 1000)\n",
-      "Kształt tensora etykiet: (20800,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(num_words=MAX_WORDS)\n",
-    "\n",
-    "tokenizer.fit_on_texts(train_data.text)\n",
-    "sequences = tokenizer.texts_to_sequences(train_data.text)\n",
-    "\n",
-    "print(f'Znaleziono {len(tokenizer.word_index)} unikatowych tokenów.')\n",
-    "\n",
-    "data = pad_sequences(sequences, maxlen=MAX_FEATURE_LEN)\n",
-    "labels = train_data.label\n",
-    "\n",
-    "print(f'Kształt tensora danych: {data.shape}')\n",
-    "print(f'Kształt tensora etykiet: {labels.shape}')"
+    "TRAINING_SAMPLES = 15000\n",
+    "VALIDATION_SAMPLES = 6000\n",
+    "MAX_WORDS = 10000"
    ]
   },
   {
@@ -95,20 +50,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = np.arange(data.shape[0])\n",
-    "np.random.shuffle(indices)\n",
-    "data = data[indices]\n",
-    "labels = labels[indices]\n",
+    "train_data = pd.read_csv('../Data/train.csv')\n",
     "\n",
-    "x_train = data[:TRAINING_SAMPLES]\n",
-    "y_train = labels[:TRAINING_SAMPLES]\n",
-    "x_val = data[TRAINING_SAMPLES : TRAINING_SAMPLES + VALIDATION_SAMPLES]\n",
-    "y_val = labels[TRAINING_SAMPLES : TRAINING_SAMPLES + VALIDATION_SAMPLES]"
+    "nan_idx = train_data.text[pd.isnull(train_data.text)].index.tolist()\n",
+    "train_data.loc[nan_idx, 'text'] = ' '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(max_features=MAX_WORDS)\n",
+    "tfidf_vectorizer.fit(train_data.text)\n",
+    "\n",
+    "x_train = tfidf_vectorizer.transform(train_data.text[:TRAINING_SAMPLES])\n",
+    "y_train = train_data.label[:TRAINING_SAMPLES]\n",
+    "x_val = tfidf_vectorizer.transform(train_data.text[TRAINING_SAMPLES : TRAINING_SAMPLES + VALIDATION_SAMPLES])\n",
+    "y_val = train_data.label[TRAINING_SAMPLES : TRAINING_SAMPLES + VALIDATION_SAMPLES]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices = np.arange(x_train.shape[0])\n",
+    "np.random.shuffle(indices)\n",
+    "\n",
+    "x_train = x_train[indices]\n",
+    "y_train = y_train[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +97,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 16
     }
    ],
    "source": [
@@ -137,33 +115,22 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 55.3076923076923%\n"
+      "Accuracy: 69.48076923076924%\n"
      ]
     }
    ],
    "source": [
     "test_data = pd.read_csv('../Data/test.csv')\n",
+    "\n",
     "nan_idx = test_data[pd.isnull(test_data.text)].index.tolist()\n",
     "test_data.loc[nan_idx, 'text'] = ' '\n",
     "\n",
-    "tokenizer = Tokenizer(num_words=MAX_WORDS)\n",
-    "tokenizer.fit_on_texts(test_data.text)\n",
-    "sequences = tokenizer.texts_to_sequences(test_data.text)\n",
-    "\n",
-    "x_test = pad_sequences(sequences, maxlen=MAX_FEATURE_LEN)\n",
+    "x_test = tfidf_vectorizer.transform(test_data.text)\n",
     "y_test = test_data.label\n",
-    "\n",
     "\n",
     "predicted = knn.predict(x_test)\n",
     "print(f'Accuracy: {np.mean(predicted == y_test) * 100}%')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
