--- a/K-NN Analysis/k_nearest_neighbours.ipynb
+++ b/K-NN Analysis/k_nearest_neighbours.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "train_data = pd.read_csv('../Data/train.csv')\n",
     "\n",
-    "nan_idx = train_data.text[pd.isnull(train_data.text)].index.tolist()\n",
+    "nan_idx = train_data[pd.isnull(train_data.text)].index.tolist()\n",
     "train_data.loc[nan_idx, 'text'] = ' '"
    ]
   },
