--- a/K-NN Analysis/k_nearest_neighbours.ipynb
+++ b/K-NN Analysis/k_nearest_neighbours.ipynb
@@ -24,18 +24,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,35 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "tfidf_vectorizer = TfidfVectorizer(max_features=MAX_WORDS)\n",
     "tfidf_vectorizer.fit(train_data.text)\n",
     "\n",
-    "x_train = tfidf_vectorizer.transform(train_data.text[:TRAINING_SAMPLES])\n",
-    "y_train = train_data.label[:TRAINING_SAMPLES]\n",
-    "x_val = tfidf_vectorizer.transform(train_data.text[TRAINING_SAMPLES : TRAINING_SAMPLES + VALIDATION_SAMPLES])\n",
-    "y_val = train_data.label[TRAINING_SAMPLES : TRAINING_SAMPLES + VALIDATION_SAMPLES]"
+    "data = tfidf_vectorizer.transform(train_data.text)\n",
+    "labels = train_data.label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = np.arange(x_train.shape[0])\n",
-    "np.random.shuffle(indices)\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_train = x_train[indices]\n",
-    "y_train = y_train[indices]"
+    "x_train, x_val, y_train, y_val = train_test_split(data, labels, test_size=0.2, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +94,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 12
     }
    ],
    "source": [
@@ -108,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 69.48076923076924%\n"
+      "Accuracy: 70.01923076923077%\n"
      ]
     }
    ],
