--- a/K-NN Analysis/k_nearest_neighbours.ipynb
+++ b/K-NN Analysis/k_nearest_neighbours.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -24,109 +24,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import KFold, cross_validate\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAINING_SAMPLES = 15000\n",
-    "VALIDATION_SAMPLES = 6000\n",
     "MAX_WORDS = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('../Data/train.csv')\n",
-    "\n",
-    "nan_idx = train_data[pd.isnull(train_data.text)].index.tolist()\n",
-    "train_data.loc[nan_idx, 'text'] = ' '"
+    "data = pd.read_csv('../Data/data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "tfidf_vectorizer = TfidfVectorizer(max_features=MAX_WORDS)\n",
-    "tfidf_vectorizer.fit(train_data.text)\n",
+    "tfidf_vectorizer.fit(data.text)\n",
     "\n",
-    "data = tfidf_vectorizer.transform(train_data.text)\n",
-    "labels = train_data.label"
+    "X = tfidf_vectorizer.transform(data.text)\n",
+    "y = data.label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(data, labels, test_size=0.2, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(n_neighbors=7)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   5 | elapsed:  6.7min remaining: 10.0min\n",
+      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:  7.1min finished\n"
+     ]
     }
    ],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=7)\n",
     "\n",
-    "knn.fit(x_train, y_train)"
+    "cv = KFold(n_splits=5, random_state=1, shuffle=True) \n",
+    "result = cross_validate(\n",
+    "    knn, X, y, \n",
+    "    cv=cv, n_jobs=-1,\n",
+    "    return_train_score=True, return_estimator=True, \n",
+    "    verbose=1\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 70.01923076923077%\n"
+      "fit_time [0.20146155 0.18051934 0.17453623 0.18151498 0.18450785]\nscore_time [91.3961277  91.38216352 86.85475469 88.2639873  86.81386566]\nestimator [KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7)]\ntest_score [0.72976099 0.74108348 0.74301137 0.73009447 0.7331791 ]\ntrain_score [0.7741951  0.77078413 0.7622536  0.77256735 0.77227818]\n"
      ]
     }
    ],
    "source": [
-    "test_data = pd.read_csv('../Data/test.csv')\n",
-    "\n",
-    "nan_idx = test_data[pd.isnull(test_data.text)].index.tolist()\n",
-    "test_data.loc[nan_idx, 'text'] = ' '\n",
-    "\n",
-    "x_test = tfidf_vectorizer.transform(test_data.text)\n",
-    "y_test = test_data.label\n",
-    "\n",
-    "predicted = knn.predict(x_test)\n",
-    "print(f'Accuracy: {np.mean(predicted == y_test) * 100}%')"
+    "for key, value in result.items():\n",
+    "    print(key, value)"
    ]
   }
  ]
