--- a/K-NN Analysis/k_nearest_neighbours.ipynb
+++ b/K-NN Analysis/k_nearest_neighbours.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../Data/data.csv')"
+    "train_data = pd.read_csv('../Data/train.csv')"
    ]
   },
   {
@@ -60,10 +60,10 @@
    "outputs": [],
    "source": [
     "tfidf_vectorizer = TfidfVectorizer(max_features=MAX_WORDS)\n",
-    "tfidf_vectorizer.fit(data.text)\n",
+    "tfidf_vectorizer.fit(train_data.text)\n",
     "\n",
-    "X = tfidf_vectorizer.transform(data.text)\n",
-    "y = data.label"
+    "X = tfidf_vectorizer.transform(train_data.text)\n",
+    "y = train_data.label"
    ]
   },
   {
@@ -88,8 +88,7 @@
     "result = cross_validate(\n",
     "    knn, X, y, \n",
     "    cv=cv, n_jobs=-1,\n",
-    "    return_train_score=True, return_estimator=True, \n",
-    "    verbose=1\n",
+    "    return_train_score=True\n",
     ")"
    ]
   },
@@ -109,6 +108,30 @@
    "source": [
     "for key, value in result.items():\n",
     "    print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv('../Data/test.csv')\n",
+    "\n",
+    "X_test = tfidf_vectorizer.transform(test_data.text)\n",
+    "y_test = test_data.label\n",
+    "\n",
+    "predicted = knn.predict(X_test)\n",
+    "print(f'Accuracy: {np.mean(predicted == y_test) * 100}%')"
    ]
   }
  ]
