--- a/K-NN Analysis/k_nearest_neighbours.ipynb
+++ b/K-NN Analysis/k_nearest_neighbours.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,38 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "tfidf_vectorizer = TfidfVectorizer(max_features=MAX_WORDS)\n",
     "tfidf_vectorizer.fit(train_data.text)\n",
     "\n",
-    "X = tfidf_vectorizer.transform(train_data.text)\n",
-    "y = train_data.label"
+    "X_train = tfidf_vectorizer.transform(train_data.text)\n",
+    "y_train = train_data.label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   5 | elapsed:  6.7min remaining: 10.0min\n",
-      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:  7.1min finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=7)\n",
     "\n",
     "cv = KFold(n_splits=5, random_state=1, shuffle=True) \n",
     "result = cross_validate(\n",
-    "    knn, X, y, \n",
+    "    knn, X_train, y_train, \n",
     "    cv=cv, n_jobs=-1,\n",
     "    return_train_score=True\n",
     ")"
@@ -94,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "fit_time [0.20146155 0.18051934 0.17453623 0.18151498 0.18450785]\nscore_time [91.3961277  91.38216352 86.85475469 88.2639873  86.81386566]\nestimator [KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7), KNeighborsClassifier(n_neighbors=7)]\ntest_score [0.72976099 0.74108348 0.74301137 0.73009447 0.7331791 ]\ntrain_score [0.7741951  0.77078413 0.7622536  0.77256735 0.77227818]\n"
+      "fit_time [0.11354494 0.11354566]\nscore_time [62.5645802  58.07011771]\ntest_score [0.70915789 0.7027328 ]\ntrain_score [0.74728005 0.7333162 ]\n"
      ]
     }
    ],
@@ -112,18 +102,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=7)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "source": [
     "knn.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy: 74.40154440154441%\n"
+     ]
+    }
+   ],
    "source": [
     "test_data = pd.read_csv('../Data/test.csv')\n",
     "\n",
@@ -133,6 +142,13 @@
     "predicted = knn.predict(X_test)\n",
     "print(f'Accuracy: {np.mean(predicted == y_test) * 100}%')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
