--- a/workbench.ipynb
+++ b/workbench.ipynb
@@ -414,10 +414,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Index(['Unnamed: 0', 'id', 'title', 'author', 'text', 'label', 'Unnamed: 0.1'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('Data/train.csv')\n",
+    "print(data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del data['Unnamed: 0']\n",
+    "del data['title']\n",
+    "del data['author']\n",
+    "del data['Unnamed: 0.1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "          id                                               text  label\n0       3722  When F. B. I. agents learned that a prime susp...      0\n1       8224  By wmw_admin on April 16, 2011 Zion’s Big Lie ...      1\n2      10953  According to ABC Eye Witness News, on Saturday...      1\n3       5703  Why does the left bother with “Resistance” the...      0\n4      18083  CLEVELAND  —     marriage and transgender righ...      0\n...      ...                                                ...    ...\n23341   8038  An    woman says she was able to talk her way ...      0\n23342  16844  The brutal and largely illegal immigrant fille...      0\n23343  12692  Life experiences give you an incalculable retu...      0\n23344    234  Well, that sure escalated quickly. “That” was ...      0\n23345   8382  Club for Growth President David McIntosh relea...      0\n\n[23346 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('Data/new_train.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(23346, 3)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Index(['id', 'text', 'label'], dtype='object')\n          id                                               text  label\n0       3722  When F. B. I. agents learned that a prime susp...      0\n1       8224  By wmw_admin on April 16, 2011 Zion’s Big Lie ...      1\n2      10953  According to ABC Eye Witness News, on Saturday...      1\n3       5703  Why does the left bother with “Resistance” the...      0\n4      18083  CLEVELAND  —     marriage and transgender righ...      0\n...      ...                                                ...    ...\n23341   8038  An    woman says she was able to talk her way ...      0\n23342  16844  The brutal and largely illegal immigrant fille...      0\n23343  12692  Life experiences give you an incalculable retu...      0\n23344    234  Well, that sure escalated quickly. “That” was ...      0\n23345   8382  Club for Growth President David McIntosh relea...      0\n\n[23346 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = pd.read_csv('Data/new_train.csv')\n",
+    "print(test.columns)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv('Data/)"
+   ]
   }
  ]
 }
